--- a/.github/workflows/manage-prs.yml
+++ b/.github/workflows/manage-prs.yml
@@ -103,7 +103,7 @@ jobs:
                 --output "${{ steps.configuration.outputs.path }}/{}" \
                 --header "Authorization: token $GITHUB_TOKEN" \
                 --header "Accept: application/vnd.github.v3.{}" \
-                https://pi.github.com/repos/${{ github.repository_owner }}/${{ github.event.repository.name }}/pulls/${{ github.event.pull_request.number }}${{ github.event.issue.number }}
+                https://api.github.com/repos/${{ github.repository_owner }}/${{ github.event.repository.name }}/pulls/${{ github.event.pull_request.number }}${{ github.event.issue.number }}
             ' \
             ::: \
               ${{ env.DIFF_IDENTIFIER }} \
