--- a/.github/workflows/assets/accesslist.yml
+++ b/.github/workflows/assets/accesslist.yml
@@ -1,4 +1,7 @@
 # Access control for the Arduino Library Manager registry.
 # This file is used by https://github.com/arduino/library-registry-submission-parser, via the "Manage PRs" workflow.
 
-[]
+- host: github.com
+  name: per1234
+  access: allow
+  reference:
