(e) Revoke registry privileges for github.com/7Semi
This user has established a pattern of irresponsible behavior in the Arduino Library Manager Registry repository. They
continued this behavior even after the bot and human maintainer made significant efforts to guide them to responsible
use.

--- a/.github/workflows/assets/accesslist.yml
+++ b/.github/workflows/assets/accesslist.yml
@@ -5,3 +5,7 @@
   name: per1234
   access: allow
   reference:
+- host: github.com
+  name: 7Semi
+  access: deny
+  reference: https://example.com#todo
