(e) Revoke registry privileges for github.com/YoavPaz
This user has established a pattern of irresponsible behavior in the Arduino Library Manager Registry repository. They
continued this behavior even after the bot and human maintainer made significant efforts to guide them to responsible
use.

--- a/.github/workflows/assets/accesslist.yml
+++ b/.github/workflows/assets/accesslist.yml
@@ -9,3 +9,7 @@
   name: 7Semi
   access: deny
   reference: https://example.com#todo
+- host: github.com
+  name: YoavPaz
+  access: deny
+  reference: https://example.com#todo
