(d) add meaningless content to workflow

--- a/.github/workflows/manage-prs.yml
+++ b/.github/workflows/manage-prs.yml
@@ -1,6 +1,7 @@
 name: Manage PRs
 
 env:
+  FOO: bar
   SUBMISSION_PARSER_VERSION: 2.0.0-rc.0 # See: https://github.com/arduino/library-manager-submission-parser/releases
   MAINTAINERS: |
     # GitHub user names to request reviews from in cases where PRs can't be managed automatically.
